Lesson-11-Ingress/ingress-paths.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-paths
spec:
  rules:
  - host: www.paki.life
    http:
      paths:
      - path: "/page1"
        pathType: ImplementationSpecific
        backend:
          service:
            name: webx
            port:
              number: 80
      - path: "/page2"
        pathType: ImplementationSpecific
        backend:
          service:
            name: webx
            port:
              number: 80
      - path: "/page3"
        pathType: ImplementationSpecific
        backend:
          service:
            name: webx
            port:
              number: 80
